django-travel-app.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-application
spec:
  replicas: 2
  selector:
    matchLabels:
      app: django-application
  template:
    metadata:
      labels:
        app: django-application
    spec:
      containers:
      - name: django-application
        image: arun1278/django-application:latest
        ports:
        - containerPort: 8000
---

apiVersion: v1
kind: Service
metadata:
  name: django-application-svc
spec:
  type: ClusterIP
  selector:
    app: django-application
  ports:
    - port: 80
      targetPort: 8000
