ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: django-travel-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: ""
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: django-application-svc
            port:
              number: 80
